infra/kustomize/base/platform/woodpecker-webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: woodpecker-webhook
spec:
  selector:
    app.kubernetes.io/name: woodpecker-webhook
  ports:
    - name: http
      port: 80
      targetPort: hook
